...
                searchQuery = "",
                searchHistory = emptyList(),
                filter = CharacterFilter(
                    onlyFavorites = true,
                    isDead = false,
                    gender = "Female",
                    culture = "Northmen",
                    seasons = listOf(1, 2, 3)
                ),
                sortOption = SortOption.FAVORITE_FIRST
            ),
            onIntent = {},
            onOpenFilterSheet = {}
...
)
@Composable
private fun SearchAndFilterControlsScrollingPreview() {
    GameOfThronesTheme {
        SearchAndFilterControls(
            state = CharactersState(
                searchQuery = "Stark",
                searchHistory = emptyList(),
                filter = CharacterFilter(
                    onlyFavorites = true,
                    isDead = false,
                    gender = "Female",
                    culture = "Northmen",
...
